--- a/src/Grafica/Administrador_ventana.form
+++ b/src/Grafica/Administrador_ventana.form
@@ -3409,34 +3409,24 @@
                               <Group type="102" alignment="1" attributes="0">
                                   <EmptySpace pref="22" max="32767" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Group type="102" attributes="0">
-                                              <Component id="clasesDictadas" min="-2" max="-2" attributes="0"/>
-                                              <EmptySpace max="-2" attributes="0"/>
-                                              <Component id="numeroClasesDictadas" min="-2" max="-2" attributes="0"/>
-                                              <EmptySpace min="-2" pref="63" max="-2" attributes="0"/>
-                                              <Component id="clasesNoDictadas" min="-2" max="-2" attributes="0"/>
-                                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                              <Component id="numeroClasesNoDictadas" min="-2" max="-2" attributes="0"/>
-                                          </Group>
-                                          <Group type="102" alignment="1" attributes="0">
-                                              <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
-                                              <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Component id="Clase_textoSeleccionarClases" min="-2" pref="175" max="-2" attributes="0"/>
-                                                  <Component id="Clase_textoSeleccionarCursoClases1" alignment="0" min="-2" pref="175" max="-2" attributes="0"/>
-                                              </Group>
-                                              <EmptySpace min="-2" pref="725" max="-2" attributes="0"/>
-                                          </Group>
+                                      <Group type="102" attributes="0">
+                                          <Component id="clasesDictadas" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace max="-2" attributes="0"/>
+                                          <Component id="numeroClasesDictadas" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace min="-2" pref="63" max="-2" attributes="0"/>
+                                          <Component id="clasesNoDictadas" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                          <Component id="numeroClasesNoDictadas" min="-2" max="-2" attributes="0"/>
                                       </Group>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Group type="103" groupAlignment="1" attributes="0">
-                                              <Component id="tablaClase" alignment="1" min="-2" pref="913" max="-2" attributes="0"/>
-                                              <Component id="tabla14" min="-2" pref="913" max="-2" attributes="0"/>
-                                              <Component id="Clase_eliminar_botonEliminarClase" alignment="1" min="-2" pref="178" max="-2" attributes="0"/>
-                                          </Group>
-                                          <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
+                                      <Group type="103" alignment="0" groupAlignment="1" attributes="0">
+                                          <Component id="tablaClase" alignment="1" min="-2" pref="913" max="-2" attributes="0"/>
+                                          <Component id="tabla14" min="-2" pref="913" max="-2" attributes="0"/>
+                                          <Component id="Clase_eliminar_botonEliminarClase" alignment="1" min="-2" pref="178" max="-2" attributes="0"/>
                                       </Group>
+                                      <Component id="Clase_textoSeleccionarCursoClases1" alignment="0" min="-2" pref="175" max="-2" attributes="0"/>
+                                      <Component id="Clase_textoSeleccionarClases" alignment="0" min="-2" pref="175" max="-2" attributes="0"/>
                                   </Group>
+                                  <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                         </DimensionLayout>
