--- a/src/Grafica/Adscripto_ventana.form
+++ b/src/Grafica/Adscripto_ventana.form
@@ -24,17 +24,17 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="panelAdministrador" alignment="0" pref="1200" max="32767" attributes="0"/>
+          <Component id="panelAdscripto" alignment="0" pref="1200" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="panelAdministrador" min="-2" max="-2" attributes="0"/>
+          <Component id="panelAdscripto" min="-2" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Container class="javax.swing.JPanel" name="panelAdministrador">
+    <Container class="javax.swing.JPanel" name="panelAdscripto">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
